# django-ghostpost

./: manage.py  pyproject.toml
django_ghostpost/: asgi.py  settings.py  urls.py  wsgi.py
ghostpost/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
ghostpost/migrations/: 0001_initial.py  0002_auto_20200513_1928.py  0003_auto_20200513_1940.py
ghostpost/templates/: addpostform.html  index.html  postdetail.html
